--- a/styles/light.css
+++ b/styles/light.css
@@ -6,7 +6,49 @@
 
 .page.theme_light {
   /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  Так стили написанные ниже будут иметь больший вес,
+  чем стили в медиазапросе предпочтений пользователя
+*/
+  --background-color: #f5f5f5;
+  --background-image: url(../images/cover-image-light.png);
+  --decoration-item-color: #353430;
+  --font-family: "IBM Plex Mono";
+  --font-size: 18px;
+  --display-header-decoration: none;
+  --change-theme-menu-text-color: #353430;
+  --change-theme-menu-button-hover-color: #353430;
+  --change-theme-menu-button-focus-color: #353430;
+  --change-theme-menu-button-active-color: #353430;
+  --header-title-text-color: #ffc2e6;
+  --text-shadow-color: #ff0070;
+  --title-decor-color: #ff8dcb;
+  --header-description-text-color: #000028;
+  --section-title-color: #353430;
+  --section-subtitle-color: #000028;
+  --section-main-text-color: #353430;
+  --section-main-text-accent-link-color: #f1b2ce;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+      /* Дублируем переменные светлой темы */
+      --background-color: #f5f5f5;
+      --background-image: url(../images/cover-image-light.png);
+      --decoration-item-color: #353430;
+      --font-family: "IBM Plex Mono";
+      --font-size: 18px;
+      --display-header-decoration: none;
+      --change-theme-menu-text-color: #353430;
+      --change-theme-menu-button-hover-color: #353430;
+      --change-theme-menu-button-focus-color: #353430;
+      --change-theme-menu-button-active-color: #353430;
+      --header-title-text-color: #ffc2e6;
+      --text-shadow-color: #ff0070;
+      --title-decor-color: #ff8dcb;
+      --header-description-text-color: #000028;
+      --section-title-color: #353430;
+      --section-subtitle-color: #000028;
+      --section-main-text-color: #353430;
+      --section-main-text-accent-link-color: #f1b2ce;
+  }
 }
