--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,529 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  display: grid;
+  background-color: var(--background-color, #000028);
+}
+
+.background-image {
+  background-image: var(--background-image, url(../images/cover-image-dark.png));
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+/* Стили для декоративного элемента в блоках header и footer - красные уголки */
+
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: block;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--decoration-item-color, #ff0070);
+  border-right: 1px solid var(--decoration-item-color, #ff0070);
+}
+
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  display: block;
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--decoration-item-color, #ff0070);
+  border-left: 1px solid var(--decoration-item-color, #ff0070);
+}
+
+@media (width >=768px) {
+  .decorated-zone::before {
+      top: 20px;
+      right: 20px;
+  }
+
+  .decorated-zone::after {
+      bottom: 20px;
+      left: 20px;
+  }
+}
+
+/* Стили блока header - отступы заданы в vh чтобы не выпадали блоки при изменении высоты */
+
+.header {
+  position: relative;
+  display: grid;
+  grid-template-rows: repeat(4, min-content);
+  align-items: center;
+  height: 100vh;
+  min-height: 668px;
+  margin-bottom: 40px;
+  padding: 10px;
+}
+
+@media (width >=768px) {
+  .header {
+      margin-bottom: 60px;
+      padding: 20px;
+  }
+}
+
+/* Стили декоративного элемента в блоке header - надпись REC с кружком */
+
+.header__decoration {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  justify-self: end;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  align-self: flex-start;
+  padding-right: 10px;
+  color: var(--decoration-item-color, #ff0070);
+  font-family: var(--font-family, "IBM Plex Mono", monospace);
+  line-height: 25px;
+}
+
+@media (width >=768px) {
+  .header__decoration {
+      top: 20px;
+      right: 20px;
+  }
+}
+
+.header__decoration::before {
+  content: "REC";
+  display: var(--display-header-decoration, block);
+  font-size: var(--font-size, 18px);
+}
+
+.header__decoration::after {
+  content: "";
+  display: var(--display-header-decoration, block);
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 4px 2px var(--decoration-item-color, #ff0070);
+  background: var(--decoration-item-color, #ff0070);
+}
+
+/* Стили блока с кнопками - меню переключения темы страницы */
+
+.header__theme-menu {
+  justify-self: end;
+  margin-top: 9.7vh;
+}
+
+@media (width >=768px) {
+  .header__theme-menu {
+      margin-top: 16.8vh;
+  }
+}
+
+@media (width >=1024px) {
+  .header__theme-menu {
+      justify-self: center;
+      align-self: end;
+      margin-top: 0;
+      padding-right: 0;
+  }
+}
+
+.header__theme-menu-item {
+  color: var(--change-theme-menu-text-color, #ff0070);
+  font-family: var(--font-family, "IBM Plex Mono", monospace);
+}
+
+.header__theme-menu-button {
+  border: none;
+  padding: 0 13px;
+  font-size: 18px;
+  text-transform: lowercase;
+  background-color: transparent;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
+}
+
+@media (width >=1024px) {
+  .header__theme-menu-list {
+      flex-direction: row;
+      gap: 10px;
+  }
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--change-theme-menu-button-hover-color, #ff0070);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-block-end: 1px solid var(--change-theme-menu-button-focus-color, #ff0070);
+  ;
+}
+
+.header__theme-menu-button_active {
+  outline: 1px solid var(--change-theme-menu-button-active-color, #ff0070);
+  ;
+  pointer-events: none;
+}
+
+/* Стили основного заголовка страницы в блоке header */
+
+.header__title {
+  margin-top: 10.5vh;
+  color: var(--header-title-text-color, #db00ff);
+  font-family: var(--font-family, "IBM Plex Mono", monospace);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 82.5%;
+}
+
+@media (width >=768px) {
+  .header__title {
+      margin-top: 17.3vh;
+      margin-left: -20px;
+      font-size: 120px;
+      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+}
+
+@media (width >=1024px) {
+  .header__title {
+      margin-top: 36.1vh;
+      margin-left: -20px;
+      font-size: 157px;
+  }
+}
+
+/* Стили для теней в тексте - основной заголовок и ссылки в тексте на странице */
+
+.text-shadow {
+  text-shadow: 4px 4px 0 var(--text-shadow-color, #ff0070);
+}
+
+/* Стили блока с текстом с описание страницы в блоке header */
+
+.header__description-text {
+  justify-self: end;
+  max-width: 364px;
+  margin-top: 8.2vh;
+  color: var(--header-description-text-color, #000028);
+  font-family: var(--font-family, "IBM Plex Mono", monospace);
+  font-weight: bold;
+  font-size: var(--font-size, 18px);
+  line-height: 23.4px;
+}
+
+@media (width >=768px) {
+  .header__description-text {
+      margin-top: 15.8vh;
+  }
+}
+
+@media (width >=1024px) {
+  .header__description-text {
+      max-width: 491px;
+      margin-top: 14.8vh;
+  }
+}
+
+.title-decor {
+  background-color: var(--title-decor-color, #ff0070);
+  ;
+}
+
+/* Стили основной части страницы */
+
+.main {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 40px;
+  padding: 0 10px;
+}
+
+@media (width >=768px) {
+  .main {
+      margin-bottom: 60px;
+      padding: 0 20px;
+  }
+}
+
+/* Далее указаны общие стили для блоков на основной странице */
+
+/* Стили заголовков блоков в основной части страницы */
+
+.section_title {
+  color: var(--section-title-color, #ff0070);
+  font-family: var(--font-family, "IBM Plex Mono", monospace);
+  font-size: var(--font-size, 18px);
+  text-align: left;
+}
+
+/* Стили подзаголовков блоков в основной части страницы */
+
+.section_secondary_title {
+  margin-bottom: 10px;
+  color: var(--section-subitle-color, #000028);
+  font-family: var(--font-family, "IBM Plex Mono", monospace);
+  font-weight: normal;
+  font-size: var(--font-size, 18px);
+  line-height: 1.3;
+  text-align: left;
+}
+
+/* Стили подзаголовков блоков в секции с картинками */
+
+.section_sub_title {
+  color: var(--section-subtitle-color, #000028);
+  font-family: var(--font-family, "IBM Plex Mono", monospace);
+  font-size: var(--font-size, 18px);
+  font-style: bold;
+  line-height: 1.3;
+  text-align: left;
+}
+
+/* Стили текстовых блоков в основной части страницы */
+
+.section_text {
+  color: var(--section-main-text-color, #f1b2ce);
+  font-family: var(--font-family, "IBM Plex Mono", monospace);
+  font-size: var(--font-size, 18px);
+  line-height: 23.4px;
+}
+
+.section_link_accent {
+  border-bottom: 1px solid var(--section-main-text-accent-link-color, #f1b2ce);
+  ;
+  text-decoration: none;
+}
+
+/* Задаем отступ снизу для всех блоков section_text кроме последних */
+
+.section_text:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+/* Стили для первого блока в основном части страницы */
+
+.main_section_why_focusing_hard {
+  display: grid;
+  gap: 20px;
+  margin-bottom: 50px;
+}
+
+@media (width >=768px) {
+  .main_section_why_focusing_hard {
+      grid-template-columns: 1fr 2fr;
+      margin-bottom: 80px;
+  }
+}
+
+@media (width >=1024px) {
+  .main_section_why_focusing_hard {
+      gap: 10px;
+  }
+}
+
+/* Стили для второго блока в основном части страницы */
+
+.main_section_what_decreases_focus {
+  display: grid;
+  gap: 20px;
+  margin-bottom: 50px;
+}
+
+@media (width >=768px) {
+  .main_section_what_decreases_focus {
+      margin-bottom: 80px;
+  }
+}
+
+@media (width >=1024px) {
+  .main_section_what_decreases_focus {
+      margin-bottom: 60px;
+  }
+}
+
+.main_section_what_decreases_focus .section_content {
+  display: grid;
+  gap: 20px;
+}
+
+@media (width >=768px) {
+  .main_section_what_decreases_focus .section_title {
+      max-width: 236px;
+  }
+}
+
+@media (width >=1024px) {
+  .main_section_what_decreases_focus .section_title {
+      max-width: 315px;
+  }
+
+  .main_section_what_decreases_focus .section_content {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: max-content 2fr;
+      gap: 20px;
+  }
+}
+
+/* Стили для третьего блока в основном части страницы */
+
+.main_section_ways_to_increase_focus {
+  display: grid;
+  gap: 20px;
+}
+
+@media (width >=768px) {
+  .main_section_ways_to_increase_focus {
+      grid-template-columns: 1fr 2fr;
+      grid-template-rows: 2fr, 1fr;
+      grid-template-areas:
+          "grid_title grid_text"
+          "grid_gallery grid_gallery";
+      row-gap: 50px;
+      column-gap: 20px;
+  }
+
+  .grid_title {
+      grid-area: grid_title;
+      max-width: 236px;
+  }
+
+  .grid_text {
+      grid-area: grid_text;
+  }
+
+  .grid_gallery {
+      grid-area: grid_gallery;
+  }
+}
+
+@media (width >=1024px) {
+  .main_section_ways_to_increase_focus {
+      row-gap: 48px;
+      column-gap: 10px;
+  }
+
+  .grid_title {
+      max-width: 315px;
+  }
+}
+
+/* Стили для блока с текстом внутри третьего блока на странице */
+
+.section_ways_to_increase_focus_text {
+  display: grid;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+/* Стили для блока с картинками внутри третьего блока на странице */
+
+.section_ways_to_increase_focus_gallery {
+  display: grid;
+  gap: 10px;
+}
+
+@media (width >=768px) {
+  .section_ways_to_increase_focus_gallery {
+      gap: 20px;
+  }
+}
+
+.section_ways_to_increase_focus_pictures {
+  display: grid;
+  gap: 10px;
+}
+
+/* Стили для экранов с шириной больше 768px - меняется расположение картинок в галерее */
+@media (width >=768px) {
+  .section_ways_to_increase_focus_pictures {
+      grid-template-columns: 229px 1fr 1fr;
+      grid-template-rows: 192px 230px 318px;
+      gap: 20px;
+  }
+
+  .image1 {
+      grid-column: span 2 / span 2;
+  }
+
+  .image2 {
+      grid-row: span 2 / span 2;
+      grid-column-start: 3;
+  }
+
+  .image3 {
+      grid-row: span 2 / span 2;
+      grid-row-start: 2;
+  }
+
+  .image4 {
+      grid-row-start: 2;
+  }
+
+  .image5 {
+      grid-column: span 2 / span 2;
+      grid-column-start: 2;
+      grid-row-start: 3;
+  }
+}
+
+@media (width >=1024px) {
+  .section_ways_to_increase_focus_pictures {
+      grid-template-columns: 315px 1fr 1fr;
+      grid-template-rows: 262px 315px 433px;
+      gap: 20px;
+  }
+}
+
+/* Общие стили для изображений внутри блока с картинками */
+
+.image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+/* Стили футера */
+
+.footer {
+  position: relative;
+  display: grid;
+  align-items: center;
+  height: 100vh;
+  min-height: 668px;
+  padding: 10px;
+}
+
+.footer-title {
+  color: var(--header-title-text-color, #db00ff);
+  font-family: var(--font-family, "IBM Plex Mono", monospace);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 82.5%;
+  text-align: center;
+}
+
+@media (width >=768px) {
+  .footer-title {
+      font-size: 120px;
+      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+}
+
+@media (width >=1024px) {
+  .footer-title {
+      font-size: 157px;
+  }
 }
