fix review comments

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -16,7 +16,7 @@
   --font-size: 18px;
   --display-header-decoration: block;
   --change-theme-menu-text-color: #ff0070;
-  --change-theme-menu-button-hover-color: #ff0070;
+  --change-theme-menu-button-hover-color: #ff007040;
   --change-theme-menu-button-focus-color: #ff0070;
   --change-theme-menu-button-active-color: #ff0070;
   --header-title-text-color: #db00ff;
