--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,25 @@
   background-attachment: fixed;
 }
 
+/* Стили блока header - отступы заданы в vh чтобы не выпадали блоки при изменении высоты */
+
+.header {
+  position: relative;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  height: 100vh;
+  min-height: 668px;
+  margin-bottom: 40px;
+  padding: 10px;
+}
+
+@media (width >=768px) {
+  .header {
+      margin-bottom: 60px;
+      padding: 20px;
+  }
+}
+
 /* Стили для декоративного элемента в блоках header и footer - красные уголки */
 
 .decorated-zone::before {
@@ -42,26 +61,6 @@
   .decorated-zone::after {
       bottom: 20px;
       left: 20px;
-  }
-}
-
-/* Стили блока header - отступы заданы в vh чтобы не выпадали блоки при изменении высоты */
-
-.header {
-  position: relative;
-  display: grid;
-  grid-template-rows: repeat(4, min-content);
-  align-items: center;
-  height: 100vh;
-  min-height: 668px;
-  margin-bottom: 40px;
-  padding: 10px;
-}
-
-@media (width >=768px) {
-  .header {
-      margin-bottom: 60px;
-      padding: 20px;
   }
 }
 
@@ -110,19 +109,13 @@
 
 .header__theme-menu {
   justify-self: end;
-  margin-top: 9.7vh;
-}
-
-@media (width >=768px) {
-  .header__theme-menu {
-      margin-top: 16.8vh;
-  }
+  align-self: center;
 }
 
 @media (width >=1024px) {
   .header__theme-menu {
       justify-self: center;
-      align-self: end;
+      align-self: flex-start;
       margin-top: 0;
       padding-right: 0;
   }
@@ -155,7 +148,7 @@
 }
 
 .header__theme-menu-button:hover {
-  outline: 1px solid var(--change-theme-menu-button-hover-color, #ff0070);
+  outline: 1px solid var(--change-theme-menu-button-hover-color, #ff007040);
 }
 
 .header__theme-menu-button:focus {
@@ -164,19 +157,17 @@
 
 .header__theme-menu-button:focus-visible {
   border-block-end: 1px solid var(--change-theme-menu-button-focus-color, #ff0070);
-  ;
 }
 
 .header__theme-menu-button_active {
   outline: 1px solid var(--change-theme-menu-button-active-color, #ff0070);
-  ;
   pointer-events: none;
 }
 
 /* Стили основного заголовка страницы в блоке header */
 
 .header__title {
-  margin-top: 10.5vh;
+  justify-self: flex-start;
   color: var(--header-title-text-color, #db00ff);
   font-family: var(--font-family, "IBM Plex Mono", monospace);
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
@@ -185,7 +176,6 @@
 
 @media (width >=768px) {
   .header__title {
-      margin-top: 17.3vh;
       margin-left: -20px;
       font-size: 120px;
       font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
@@ -194,24 +184,31 @@
 
 @media (width >=1024px) {
   .header__title {
-      margin-top: 36.1vh;
       margin-left: -20px;
       font-size: 157px;
   }
 }
 
-/* Стили для теней в тексте - основной заголовок и ссылки в тексте на странице */
+/* Тень для заголовка в блоках header и footer */
 
 .text-shadow {
   text-shadow: 4px 4px 0 var(--text-shadow-color, #ff0070);
 }
 
+/* Для ширины экрана от 1024px цвет тени одинаковый для светлой и темной темы */
+
+@media (width >=1024px) {
+  .text-shadow {
+      --text-shadow-color: #ff0070;
+  }
+}
+
 /* Стили блока с текстом с описание страницы в блоке header */
 
 .header__description-text {
-  justify-self: end;
+  justify-self: flex-end;
+  align-self: center;
   max-width: 364px;
-  margin-top: 8.2vh;
   color: var(--header-description-text-color, #000028);
   font-family: var(--font-family, "IBM Plex Mono", monospace);
   font-weight: bold;
@@ -219,41 +216,37 @@
   line-height: 23.4px;
 }
 
-@media (width >=768px) {
+@media (width >=1024px) {
   .header__description-text {
-      margin-top: 15.8vh;
+      justify-self: end;
+      align-self: flex-end;
+      max-width: 491px;
+      margin-bottom: 114px;
   }
 }
 
-@media (width >=1024px) {
-  .header__description-text {
-      max-width: 491px;
-      margin-top: 14.8vh;
-  }
-}
+/* Стили цветного фона для блоков с текстом - текст с описанием в header и заголовки в основной части страницы */
 
 .title-decor {
   background-color: var(--title-decor-color, #ff0070);
-  ;
 }
 
 /* Стили основной части страницы */
 
 .main {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  gap: 50px;
   margin-bottom: 40px;
   padding: 0 10px;
 }
 
 @media (width >=768px) {
   .main {
+      gap: 80px;
       margin-bottom: 60px;
       padding: 0 20px;
   }
 }
-
-/* Далее указаны общие стили для блоков на основной странице */
 
 /* Стили заголовков блоков в основной части страницы */
 
@@ -261,19 +254,20 @@
   color: var(--section-title-color, #ff0070);
   font-family: var(--font-family, "IBM Plex Mono", monospace);
   font-size: var(--font-size, 18px);
-  text-align: left;
 }
 
 /* Стили подзаголовков блоков в основной части страницы */
 
 .section_secondary_title {
-  margin-bottom: 10px;
-  color: var(--section-subitle-color, #000028);
+  color: var(--section-subtitle-color, #000028);
   font-family: var(--font-family, "IBM Plex Mono", monospace);
-  font-weight: normal;
+  font-weight: bold;
   font-size: var(--font-size, 18px);
   line-height: 1.3;
-  text-align: left;
+}
+
+.main_section_ways_to_increase_focus .section_secondary_title {
+  font-weight: normal;
 }
 
 /* Стили подзаголовков блоков в секции с картинками */
@@ -281,10 +275,9 @@
 .section_sub_title {
   color: var(--section-subtitle-color, #000028);
   font-family: var(--font-family, "IBM Plex Mono", monospace);
+  font-weight: bold;
   font-size: var(--font-size, 18px);
-  font-style: bold;
   line-height: 1.3;
-  text-align: left;
 }
 
 /* Стили текстовых блоков в основной части страницы */
@@ -296,30 +289,72 @@
   line-height: 23.4px;
 }
 
-.section_link_accent {
-  border-bottom: 1px solid var(--section-main-text-accent-link-color, #f1b2ce);
-  ;
-  text-decoration: none;
-}
-
 /* Задаем отступ снизу для всех блоков section_text кроме последних */
 
 .section_text:not(:last-child) {
   margin-bottom: 20px;
 }
 
-/* Стили для первого блока в основном части страницы */
+/* Стили для ссылок в основной части страницы */
 
-.main_section_why_focusing_hard {
+.section_link_accent {
+  text-decoration: none;
+  text-shadow: 4px 4px 0 var(--text-shadow-color, #ff0070);
+}
+
+.section_link_accent:hover {
+  border-bottom: 1px solid var(--section-main-text-accent-link-color, #f1b2ce);
+  text-decoration: none;
+}
+
+.section_link_accent:hover {
+  border-bottom: 1px solid var(--section-main-text-color, #f1b2ce);
+}
+
+.section_link_accent:focus {
+  outline: none;
+}
+
+.section_link_accent:focus-visible {
+  outline: 1px solid var(--section-main-text-color, #f1b2ce);
+}
+
+/* Общие стили для всех блоков в основной части */
+
+/* Стили для отдельного блока - секции */
+
+.main_section {
   display: grid;
   gap: 20px;
-  margin-bottom: 50px;
 }
+
+/* В блоке с галереей отступ от заголовка до галереи отличается - переопределяем gap */
+
+.section_ways_to_increase_focus_gallery {
+  gap: 10px;
+}
+
+/* Медиазпросы для блоков в основной части  */
 
 @media (width >=768px) {
   .main_section_why_focusing_hard {
       grid-template-columns: 1fr 2fr;
-      margin-bottom: 80px;
+  }
+
+  .main_section_what_decreases_focus .section_title {
+      max-width: 236px;
+  }
+
+  .main_section_ways_to_increase_focus {
+      grid-template-columns: 1fr 2fr;
+  }
+
+  .main_section_ways_to_increase_focus .section_title {
+      max-width: 236px;
+  }
+
+  .section_ways_to_increase_focus_gallery {
+      gap: 20px;
   }
 }
 
@@ -327,148 +362,65 @@
   .main_section_why_focusing_hard {
       gap: 10px;
   }
-}
 
-/* Стили для второго блока в основном части страницы */
-
-.main_section_what_decreases_focus {
-  display: grid;
-  gap: 20px;
-  margin-bottom: 50px;
-}
-
-@media (width >=768px) {
-  .main_section_what_decreases_focus {
-      margin-bottom: 80px;
-  }
-}
-
-@media (width >=1024px) {
-  .main_section_what_decreases_focus {
-      margin-bottom: 60px;
-  }
-}
-
-.main_section_what_decreases_focus .section_content {
-  display: grid;
-  gap: 20px;
-}
-
-@media (width >=768px) {
-  .main_section_what_decreases_focus .section_title {
-      max-width: 236px;
-  }
-}
-
-@media (width >=1024px) {
   .main_section_what_decreases_focus .section_title {
       max-width: 315px;
   }
 
   .main_section_what_decreases_focus .section_content {
-      display: grid;
       grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: max-content 2fr;
-      gap: 20px;
-  }
-}
-
-/* Стили для третьего блока в основном части страницы */
-
-.main_section_ways_to_increase_focus {
-  display: grid;
-  gap: 20px;
-}
-
-@media (width >=768px) {
-  .main_section_ways_to_increase_focus {
-      grid-template-columns: 1fr 2fr;
-      grid-template-rows: 2fr, 1fr;
-      grid-template-areas:
-          "grid_title grid_text"
-          "grid_gallery grid_gallery";
-      row-gap: 50px;
-      column-gap: 20px;
   }
 
-  .grid_title {
-      grid-area: grid_title;
-      max-width: 236px;
-  }
-
-  .grid_text {
-      grid-area: grid_text;
-  }
-
-  .grid_gallery {
-      grid-area: grid_gallery;
-  }
-}
-
-@media (width >=1024px) {
-  .main_section_ways_to_increase_focus {
-      row-gap: 48px;
-      column-gap: 10px;
-  }
-
-  .grid_title {
+  .main_section_ways_to_increase_focus .section_title {
       max-width: 315px;
   }
+
+  .main_section_ways_to_increase_focus {
+      gap: 10px;
+  }
 }
 
-/* Стили для блока с текстом внутри третьего блока на странице */
+/* Стили для контента внутри блока - секции */
 
-.section_ways_to_increase_focus_text {
+.section_content {
   display: grid;
   gap: 20px;
-  margin-bottom: 30px;
 }
 
-/* Стили для блока с картинками внутри третьего блока на странице */
+/* В блоке с галереей отступ между карточками отличается - переопределяем gap */
 
-.section_ways_to_increase_focus_gallery {
-  display: grid;
+.section_ways_to_increase_focus_gallery .section_content {
   gap: 10px;
 }
 
-@media (width >=768px) {
-  .section_ways_to_increase_focus_gallery {
-      gap: 20px;
-  }
-}
+/* Медиазпросы для галереи картинок */
 
-.section_ways_to_increase_focus_pictures {
-  display: grid;
-  gap: 10px;
-}
-
-/* Стили для экранов с шириной больше 768px - меняется расположение картинок в галерее */
 @media (width >=768px) {
-  .section_ways_to_increase_focus_pictures {
+  .section_ways_to_increase_focus_gallery .section_content {
       grid-template-columns: 229px 1fr 1fr;
-      grid-template-rows: 192px 230px 318px;
+      grid-template-rows: repeat(3, min-content);
       gap: 20px;
   }
 
-  .image1 {
+  .image-sunset {
       grid-column: span 2 / span 2;
   }
 
-  .image2 {
+  .image-ice-cream {
       grid-row: span 2 / span 2;
       grid-column-start: 3;
   }
 
-  .image3 {
+  .image-tape {
       grid-row: span 2 / span 2;
       grid-row-start: 2;
   }
 
-  .image4 {
+  .image-books {
       grid-row-start: 2;
   }
 
-  .image5 {
+  .image-street {
       grid-column: span 2 / span 2;
       grid-column-start: 2;
       grid-row-start: 3;
@@ -476,11 +428,18 @@
 }
 
 @media (width >=1024px) {
-  .section_ways_to_increase_focus_pictures {
+  .section_ways_to_increase_focus_gallery .section_content {
       grid-template-columns: 315px 1fr 1fr;
-      grid-template-rows: 262px 315px 433px;
       gap: 20px;
   }
+}
+
+/* Стили для отдельной карточки внутри контентного блока - секции */
+
+.section_content_card {
+  display: grid;
+  grid-template-rows: min-content 1fr;
+  gap: 10px;
 }
 
 /* Общие стили для изображений внутри блока с картинками */
